add saving objects to db

--- a/src/main/resources/templates/helloform.html
+++ b/src/main/resources/templates/helloform.html
@@ -9,7 +9,7 @@
 
     <form method="post" action="/trades">
         <input type="text" name="name">
-        <input type="number" name="buy price">
+        <input type="number" step="0.0000001" name="buy price">
 
         <button type="submit">Add trade</button>
     </form>
