add fotter, and one method in controller

--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -7,4 +7,12 @@
 <body>
     <h1 th:text="${trade}">Hello world!</h1>
 </body>
+
+<div>
+    <footer>
+        <p>Created by: Sebastian Slupinski</p>
+        <p>Contact information: slupinski.sebastian@gmail.com.</p>
+    </footer>
+</div>
+
 </html>
