--- a/src/main/resources/templates/helloform.html
+++ b/src/main/resources/templates/helloform.html
@@ -14,5 +14,12 @@
         <button type="submit">Add trade</button>
     </form>
 
+    <div>
+        <footer>
+            <p>Created by: Sebastian Slupinski</p>
+            <p>Contact information: slupinski.sebastian@gmail.com.</p>
+        </footer>
+    </div>
+
 </body>
 </html>
