adding new trades and displays them in main site

--- a/src/main/resources/templates/main-site.html
+++ b/src/main/resources/templates/main-site.html
@@ -9,12 +9,12 @@
 <header>
     <nav>
         <ul>
-            <li><a href="hello.html"> Add new trade </a></li>
+            <li><a href="add-trade.html"> Add new trade </a></li>
         </ul>
     </nav>
 </header>
 
-    <table>
+    <table border="1">
         <thead>
             <tr>
                 <th> Buy Date </th>
