--- a/src/main/resources/templates/add-trade.html
+++ b/src/main/resources/templates/add-trade.html
@@ -2,11 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Hello Form</title>
 </head>
+
 <body>
-    <h1 th:text="${trade}">Hello world!</h1>
-</body>
+
+<form method="post" action="/main">
+    <input type="text" name="name">
+    <input type="number" step="0.0000001" name="buy price">
+
+    <button type="submit">Add trade</button>
+</form>
 
 <div>
     <footer>
@@ -15,4 +21,5 @@
     </footer>
 </div>
 
+</body>
 </html>
