--- a/src/main/resources/templates/add-trade.html
+++ b/src/main/resources/templates/add-trade.html
@@ -8,8 +8,8 @@
 <body>
 
 <form method="post" action="/main">
-    <input type="text" name="name">
-    <input type="number" step="0.0000001" name="buy price">
+    Coin name: <input type="text" name="name">
+    Amount of btc paid: <input type="number" step="0.0000001" name="buy price">
 
     <button type="submit">Add trade</button>
 </form>
