add template to show active trades

--- a/src/main/resources/templates/main-site.html
+++ b/src/main/resources/templates/main-site.html
@@ -10,6 +10,7 @@
     <nav>
         <ul>
             <li><a href="add-trade.html"> Add new trade </a></li>
+            <li><a href="active-trades.html"> Show active trades </a></li>
         </ul>
     </nav>
 </header>
