--- a/src/main/resources/templates/active-trades.html
+++ b/src/main/resources/templates/active-trades.html
@@ -10,7 +10,8 @@
     <nav>
         <ul>
             <li><a href="add-trade.html"> Add new trade </a></li>
-            <li><a href="active-trades.html"> Show active trades </a></li>
+            <li><a href="main-site.html"> Show all trades </a></li>
+            <li><a href="active-trades.html"> Show open trades </a></li>
         </ul>
     </nav>
 </header>
