--- a/src/main/resources/templates/add-trade.html
+++ b/src/main/resources/templates/add-trade.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<form method="post" action="/main">
+<form method="post" action="/main-site.html">
     Coin name: <input type="text" name="name">
     Amount of btc paid: <input type="number" step="0.0000001" name="buy price">
 
