repair percentage and add template after closing trade

--- a/src/main/resources/templates/trade-closed.html
+++ b/src/main/resources/templates/trade-closed.html
@@ -7,6 +7,18 @@
 
 <body>
 
+<header>
+    <nav>
+        <ul>
+            <li><a href="add-trade.html"> Add new trade </a></li>
+            <li><a href="main-site.html"> Show all trades </a></li>
+            <li><a href="active-trades.html"> Show open trades </a></li>
+        </ul>
+    </nav>
+</header>
+
+<p> Trade closed successfully</p>
+
 <div>
     <footer>
         <p>Created by: Sebastian Slupinski</p>
