add button to close trade

--- a/src/main/resources/templates/trade-closed.html
+++ b/src/main/resources/templates/trade-closed.html
@@ -13,6 +13,7 @@
             <li><a href="add-trade.html"> Add new trade </a></li>
             <li><a href="main-site.html"> Show all trades </a></li>
             <li><a href="active-trades.html"> Show open trades </a></li>
+            <li><a href="close-trade.html"> Close trade </a></li>
         </ul>
     </nav>
 </header>
