add template for showing closed trades

--- a/src/main/resources/templates/trade-closed.html
+++ b/src/main/resources/templates/trade-closed.html
@@ -14,6 +14,7 @@
             <li><a href="main-site.html"> Show all trades </a></li>
             <li><a href="active-trades.html"> Show open trades </a></li>
             <li><a href="close-trade.html"> Close trade </a></li>
+            <li><a href="closed-trades.html"> Show closed trades </a></li>
         </ul>
     </nav>
 </header>
