budgetDao work properly

--- a/src/main/resources/templates/statistics.html
+++ b/src/main/resources/templates/statistics.html
@@ -18,7 +18,7 @@
     </nav>
 </header>
 
-<p>General budget : <span th:text="${statistics.}"></p>
+<p>General budget : <span th:text="${latestBudget.getGeneralBudget()}"></span></p>
 
 </body>
 
