add reflinks to all sub-sites

--- a/src/main/resources/templates/trade-closed.html
+++ b/src/main/resources/templates/trade-closed.html
@@ -10,11 +10,13 @@
 <header>
     <nav>
         <ul>
+            <li><a href="add-budget.html"> Add budget </a></li>
             <li><a href="add-trade.html"> Add new trade </a></li>
             <li><a href="main-site.html"> Show all trades </a></li>
             <li><a href="active-trades.html"> Show open trades </a></li>
             <li><a href="close-trade.html"> Close trade </a></li>
             <li><a href="closed-trades.html"> Show closed trades </a></li>
+            <li><a href="statistics.html"> Show statistics </a></li>
         </ul>
     </nav>
 </header>
