statistics show free and frozen btc

--- a/src/main/resources/templates/statistics.html
+++ b/src/main/resources/templates/statistics.html
@@ -21,6 +21,8 @@
 </header>
 
 <p>General budget : <span th:text="${latestBudget.getGeneralBudget()}"></span></p>
+<p>Free budget : <span th:text="${freeBudget}"></span></p>
+<p>Frozen budget : <span th:text="${frozenBudget}"></span></p>
 
 </body>
 
