--- a/src/main/resources/templates/statistics.html
+++ b/src/main/resources/templates/statistics.html
@@ -23,6 +23,8 @@
 <p>General budget : <span th:text="${latestBudget.getGeneralBudget()}"></span></p>
 <p>Free budget : <span th:text="${freeBudget}"></span></p>
 <p>Frozen budget : <span th:text="${frozenBudget}"></span></p>
+<p>Average percent per day : <span th:text="${averageDay}"></span></p>
+
 
 </body>
 
