site shows available btc to withdraw now

--- a/src/main/resources/templates/active-trades.html
+++ b/src/main/resources/templates/active-trades.html
@@ -16,6 +16,7 @@
             <li><a href="close-trade.html"> Close trade </a></li>
             <li><a href="closed-trades.html"> Show closed trades </a></li>
             <li><a href="statistics.html"> Show statistics </a></li>
+            <li><a href="decrease-budget.html"> Decrease budget </a></li>
         </ul>
     </nav>
 </header>
