--- a/src/main/resources/templates/decrease-budget.html
+++ b/src/main/resources/templates/decrease-budget.html
@@ -12,6 +12,8 @@
 
     <button type="submit">Decrease budget</button>
 </form>
+<p>You have <span th:text="${btcFree}"></span> available BTC</p>
+
 
 <div>
     <footer>
