fix button names at editing menu

--- a/src/main/resources/templates/edit-trade.html
+++ b/src/main/resources/templates/edit-trade.html
@@ -10,9 +10,9 @@
 <header>
     <nav>
         <ul>
-            <li><a href="edit-open-price.html"> Add budget </a></li>
-            <li><a href="edit-coin-name"> Add new trade </a></li>
-            <li><a href="edit-sell-price"> Show all trades </a></li>
+            <li><a href="edit-open-price.html"> Edit open price </a></li>
+            <li><a href="edit-coin-name.html"> Edit coin name </a></li>
+            <li><a href="edit-sell-price.html"> Edit sell price </a></li>
             <li><a href="main-site.html"> Go back to main site </a></li>
         </ul>
     </nav>
