--- a/src/main/resources/templates/main-site.html
+++ b/src/main/resources/templates/main-site.html
@@ -17,6 +17,7 @@
             <li><a href="closed-trades.html"> Show closed trades </a></li>
             <li><a href="statistics.html"> Show statistics </a></li>
             <li><a href="decrease-budget.html"> Decrease budget </a></li>
+            <li><a href="edit-trade.html"> Edit trade </a></li>
         </ul>
     </nav>
 </header>
