--- a/src/main/resources/templates/edit-open-price.html
+++ b/src/main/resources/templates/edit-open-price.html
@@ -7,12 +7,12 @@
 
 <body>
 
-<form method="post" action="/statement-site.html">
+<form method="post" action="/edit-open-price.html">
     <select name="trade">
         <option value="">Select trade</option>
         <option th:each="trade : ${trades}"
                 th:value="${trade.id}"
-                th:text="${trade.getOpenDate()}+' : '+${trade.getBuyPrice()}+' : '+${trade.getName()}' : '+${trade.getSellPrice()}"></option>
+                th:text="${trade.getOpenDate()}+' : '+${trade.getBuyPrice()}+' : '+${trade.getName()}"></option>
     </select>
 
     Amount of btc paid: <input type="number" step="0.0000001" name="open price">
