editing coin name available now

--- a/src/main/resources/templates/edit-coin-name.html
+++ b/src/main/resources/templates/edit-coin-name.html
@@ -16,7 +16,7 @@
     </select>
 
     Coin name: <input type="text" name="name">
-    <button type="submit">Submit edited coin name</button>
+    <button type="submit">Submit new coin name</button>
 
 </form>
 
