--- a/src/main/resources/templates/statement-site.html
+++ b/src/main/resources/templates/statement-site.html
@@ -22,7 +22,7 @@
     </nav>
 </header>
 
-<p><span th:text="${errorMessage}"></span></p>
+<p><span th:text="${Message}"></span></p>
 
 <div>
     <footer>
