--- a/src/main/resources/templates/add-budget.html
+++ b/src/main/resources/templates/add-budget.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<form method="post" action="/statistics.html">
+<form method="post" action="/statistics">
     Enter amount of btc budget to add: <input type="number" step="0.0000001" name="budget">
 
     <button type="submit">Add budget</button>
