--- a/src/main/resources/templates/close-trade.html
+++ b/src/main/resources/templates/close-trade.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<form method="post" action="/trade-closed.html">
+<form method="post" action="/trade-closed">
     <select name="trade">
         <option value="">Select trade</option>
         <option th:each="trade : ${trades}"
