--- a/src/main/resources/templates/decrease-budget.html
+++ b/src/main/resources/templates/decrease-budget.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<form method="post" action="/statement-site.html">
+<form method="post" action="/statement-site">
     Enter amount of btc you want to take from your budget: <input type="number" step="0.0000001" name="budget">
 
     <button type="submit">Decrease budget</button>
