--- a/src/main/resources/templates/edit-coin-name.html
+++ b/src/main/resources/templates/edit-coin-name.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<form method="post" action="/edit-coin-name.html">
+<form method="post" action="/edit-coin-name">
     <select name="trade">
         <option value="">Select trade</option>
         <option th:each="trade : ${trades}"
