--- a/src/main/resources/templates/edit-trade.html
+++ b/src/main/resources/templates/edit-trade.html
@@ -10,10 +10,10 @@
 <header>
     <nav>
         <ul>
-            <li><a href="edit-open-price.html"> Edit open price </a></li>
-            <li><a href="edit-coin-name.html"> Edit coin name </a></li>
-            <li><a href="edit-sell-price.html"> Edit sell price </a></li>
-            <li><a href="main-site.html"> Go back to main site </a></li>
+            <li><a href="edit-open-price"> Edit open price </a></li>
+            <li><a href="edit-coin-name"> Edit coin name </a></li>
+            <li><a href="edit-sell-price"> Edit sell price </a></li>
+            <li><a href="main-site"> Go back to main site </a></li>
         </ul>
     </nav>
 </header>
