--- a/src/main/resources/templates/trade-closed.html
+++ b/src/main/resources/templates/trade-closed.html
@@ -10,15 +10,15 @@
 <header>
     <nav>
         <ul>
-            <li><a href="add-budget.html"> Add budget </a></li>
-            <li><a href="add-trade.html"> Add new trade </a></li>
-            <li><a href="main-site.html"> Show all trades </a></li>
-            <li><a href="active-trades.html"> Show open trades </a></li>
-            <li><a href="close-trade.html"> Close trade </a></li>
-            <li><a href="closed-trades.html"> Show closed trades </a></li>
-            <li><a href="statistics.html"> Show statistics </a></li>
-            <li><a href="decrease-budget.html"> Decrease budget </a></li>
-            <li><a href="edit-trade.html"> Edit trade </a></li>
+            <li><a href="add-budget"> Add budget </a></li>
+            <li><a href="add-trade"> Add new trade </a></li>
+            <li><a href="main-site"> Show all trades </a></li>
+            <li><a href="active-trades"> Show open trades </a></li>
+            <li><a href="close-trade"> Close trade </a></li>
+            <li><a href="closed-trades"> Show closed trades </a></li>
+            <li><a href="statistics"> Show statistics </a></li>
+            <li><a href="decrease-budget"> Decrease budget </a></li>
+            <li><a href="edit-trade"> Edit trade </a></li>
 
         </ul>
     </nav>
